# quaesar

./: .gitignore  CMakeLists.txt  bootrom.s  cia.cpp  drawing.cpp  main.cpp  memory.cpp  readme.md
.github/workflows/: ci.yml  format_check.yml
include/: crc32.h  uae.h
od-cross/: dummy.cpp  file_system.cpp  sysconfig.h  thread.cpp  winuae_compat.h
od-cross/machdep/: maccess.h
scripts/: open_vs_solution.cmd
src/: .clang-format  .editorconfig  adf.cpp  adf.h  ahidsound.h  ahidsound_new.h  akiko.cpp  ar.cpp  avioutput.h  blkdev.cpp  crc32.cpp  debug.cpp  debugger.cpp  debugger.h  debugger_api.cpp  debugger_api.h  disk.cpp  diskutil.cpp  doshunks.h  dummy.cpp  eastl.cpp  eastl.h  expansion.cpp  fdi2raw.cpp  file_system.cpp  filepaths.cpp  gfx.cpp  gfxutil.cpp  gui.cpp  hardfile_host.cpp  imgui_eastl.cpp  imgui_eastl.h  input.cpp  logging.cpp  memory.cpp  mman.cpp  parse_options.h  quaesar.cpp  quaesar.h  reloc.cpp  (+11 more)
src/debugger/: action_mgr.cpp  action_mgr.h  class_mgr.h  debugger.cpp  debugger.h  disassembly_view.cpp  disassembly_view.h  memory_view.cpp  memory_view.h  register_view.cpp  register_view.h  vm.cpp  vm.h
src/debugger/action/: uae_actions.cpp
src/debugger/generic/: color.h  memory.cpp  memory.h  types.cpp  types.h
src/debugger/imp/: vm_uae_imp.cpp  vm_uae_imp.h
src/debugger/ui/: base.h  gui_manager.cpp  gui_manager.h  ui_view.cpp  ui_view.h
src/debugger/window/: colors_wnd.cpp  colors_wnd.h  console_wnd.cpp  console_wnd.h  disassembly_wnd.cpp  disassembly_wnd.h  mem_graph_wnd.cpp  mem_graph_wnd.h  memory_wnd.cpp  memory_wnd.h  registers_wnd.cpp  registers_wnd.h  screen_wnd.cpp  screen_wnd.h
src/machdep/: m68k.cpp  m68k.h  maccess.h
src/sounddep/: sound.cpp  sound.h
src/threaddep/: thread.h
uae_src/: autoconf.cpp  cfgfile.cpp  cia.cpp  custom.cpp  debug.cpp  disk.cpp  drawing.cpp  inputdevice.cpp  logging.cpp  main.cpp  memory.cpp  newcpu.cpp  savestate.cpp  serial.cpp  specialmonitors.cpp  zfile.cpp  zfile_archive.cpp
uae_src/include/: debug.h  inputdevice.h  keyboard.h
uae_src/include/uae/: io.h  log.h
uae_src/jit/: gencomp.cpp
uae_src/od-win32/: winuaechangelog.txt
uae_src/od-win32/machdep/: maccess.h
